# ibkr-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/ibkr_mcp/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py  server.py
src/ibkr_mcp/tools/: __init__.py  account.py  futures.py  market_data.py  options.py  orders.py  orders_advanced.py  risk.py  scanners.py
src/ibkr_mcp/utils/: __init__.py  circuit_breaker.py  contracts.py  rate_limiter.py  timezone.py
tests/: conftest.py  test_circuit_breaker.py  test_circuit_breaker_wiring.py  test_client_heartbeat.py  test_config.py  test_models.py
